<resources>
    <string name="app_name">Glimpses</string>
    <string name="create_an_account">Create an Account</string>
    <string name="take_the_next_step">Take the next step in social experiences</string>
    <string name="image">Image</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="already_have_an_account">Already have an account? Sign In</string>
    <string name="switch_to_business_account">Switch to Business Account</string>
    <string name="terms_privacy"><![CDATA[By creating an account, you agree to SneakPeek’s Terms & Conditions of Use and Privacy Policy.]]></string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="discover_the_world_around_you">Discover the World Around You</string>
    <string name="continue_string">Continue</string>
    <string name="continue_as_business">Continue as Business</string>
    <string name="get_started">Get Started</string>
    <string name="remember_me">Remember me</string>
    <string name="new_to_sneakpeek_create_account">New to SneakPeek? Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="add_a_profile_picture">Great! Now Let’s Add a Profile Picture</string>
    <string name="aligns_with_your_interests">Pick one or two spaces that most aligns with your interests.</string>
    <string name="open_business_door">Open the Ultimate Business Door</string>
    <string name="next">Next</string>
    <string name="what_s_your_name">What\'s Your Name?</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_pwd_string">Don’t worry! It happens. Please enter the phone number or email associated with your account.</string>
    <string name="username_email">Username/Email</string>
    <string name="enter_username_or_email">Enter Username or Email</string>
    <string name="submit">Submit</string>
    <string name="add_friends_via_push_or_texts">Add friends via push or texts</string>
    <string name="friend_count">%1$s friends are already on SneakPeek</string>
    <string name="add">Add</string>
    <string name="name">Naomi T.</string>
    <string name="count">365</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="friends">Friends</string>
    <string name="my_profile">My Profile</string>
    <string name="userName">\@naomit7</string>
    <string name="lists">Lists</string>
    <string name="signIn">Sign In</string>
    <string name="termsAndConditions">Terms &amp; Conditions</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="search_contacts">Search contacts…</string>
    <string name="reset_link">A Reset Link has Been Sent to Your Email</string>
    <string name="reset_link_2">A reset password has been sent to your email. Please follow the instructions in the email to reset your password</string>
    <string name="go_to_sign_in">Go to Sign In</string>
    <string name="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non quam ornare duis!</string>
    <string name="location">New York City</string>
    <string name="link">www.examplelink.com</string>
    <string name="duration">42s</string>
    <string name="posted_time">21h ago</string>
    <string name="posts">Posts</string>
    <string name="minus">-</string>
    <string name="time">2h</string>
    <string name="this_is_sub_list">This is Sub List</string>
    <string name="how_to_make_a_website">How to make a website?</string>
    <string name="urlTC">https://www.simform.com/</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bars_amp_nightlife"><![CDATA[Bars & Nightlife]]></string>
    <string name="business_neighborhood">Type of business • Neighborhood</string>
    <string name="location_name">Location Name</string>
    <string name="peeks">Peeks</string>
    <string name="northern_bar_amp_brewery"><![CDATA[Northern Bar & Brewery]]></string>
    <string name="follow">Follow</string>
    <string name="_243">243</string>
    <string name="_2k">2k</string>
    <string name="lorem_text">Lorem ipsum dolor sit amet, conse ipsu Lorem ipsum dolor sit amet, conse ipsu........</string>
    <string name="add_new_location">Add New Location</string>
    <string name="similar_places">Similar Places</string>
    <string name="hello">Hello</string>
    <string name="review_now">Review Now</string>
    <string name="select_your_interest">Select Your Interest</string>
    <string name="_24_locations_chicago">24 Locations • Chicago</string>
    <string name="best_bars_in_nchicago">Best Bars in \nChicago</string>
    <string name="ahmedabad">ahmedabad</string>
    <string name="textview">TextView</string>
    <string name="plus_image">Plus Image</string>
    <string name="cancel_icon">Cancel Icon</string>
    <string name="back_image">Back Image</string>
    <string name="verification_code">Verification Code</string>
    <string name="we_have_sent_a_code_to_your_email">We have sent a code to your email:</string>
    <string name="didn_t_receive_it_tap_to_resend">Didn’t receive it?</string>
    <string name="change_verification_method">Change verification method</string>
    <string name="tap_to_resend">Tap to resend.</string>
    <string name="create_a_password">Create a Password</string>
    <string name="password">Password</string>
    <string name="must_be_8_characters_long">Must be 8 characters long</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="must_have_special_characters_amp"><![CDATA[Must have special characters (!@$%&)]]></string>
    <string name="must_have_letters_and_numbers">Must have letters and numbers</string>
    <string name="reset_password">Reset Password</string>
    <string name="when_is_your_birthday">When is Your Birthday?</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="emailMessage">%1$s %2$s</string>
    <string name="send">Send</string>
    <string name="select_issue">Select Issue</string>
    <string name="title_of_issue">Title of Issue</string>
    <string name="issue_title">Issue Title</string>
    <string name="feel_free_to_reach_out_to_us_our_team_is_happy_to_help_you">Feel free to reach out to us. Our team is happy to help you.</string>
    <string name="description">Description</string>
    <string name="contact_us">Contact Us</string>
    <string name="description_example">Description Example.</string>
    <string name="image_edit_button">Image Edit Button</string>
    <string name="image_delete_button">Image Delete Button</string>
    <string name="issue_photo">Issue Photo</string>
    <string name="issue_selected">Issue Selected</string>
    <string name="must_be_same_as_password">Must be same as Password</string>
    <string name="old_password_and_new_password_cannot_be_same">Old Password and New Password cannot be same</string>
    <string name="you_can_tap_to_resend_otp">You can tap to resend OTP!</string>
    <string name="resending">Resending…</string>
    <string name="verification_method_changed">Verification Method Changed</string>
    <string name="business_hours">Business Hours</string>
    <string name="tell_your_customers_which_hours_you_are_open">Tell your customers which hours you are open.</string>
    <string name="dash">-</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="day_of_week">Day of Week</string>
    <string name="repeat_daily">Repeat Daily</string>
    <string name="add_hours">Add Hours</string>
    <string name="please_specify_the_length_of_the_otp_view">Please specify the length of the otp view</string>
    <array name="array_issue_selected">
        <item>Not Working</item>
        <item>Internet Issue</item>
        <item>On-Time</item>
    </array>
</resources>