<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.LoginActivity">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextView.title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="121dp"
        android:text="@string/sign_in" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextView.editTextlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/username_email" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/eTxtUsername"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_username_or_email" />

    <TextView
        style="@style/TextView.editTextlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@null"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTxtPassword"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/remember_me" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtVForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/forgot_password"
        android:textColor="@color/mint"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        style="@style/Button.Mint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:alpha="0.5"
        android:text="@string/sign_in" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/textGrey" />

    <TextView
        android:id="@+id/txtvToBussnessAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="76dp"
        android:text="@string/switch_to_business_account" />

</LinearLayout>