<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgBlack"
    android:padding="16dp"
    tools:context=".activity.SignupEmailActivity">

    <TextView
        android:id="@+id/txtCreateAccount"
        style="@style/TextView.Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/create_account" />

    <TextView
        android:id="@+id/txtEmail"
        style="@style/TextView.Normal.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCreateAccount"
        android:layout_marginTop="30dp"
        android:text="@string/email" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmail"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmail"
        android:hint="@string/enter_email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnNext"
        style="@style/Button.Mint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:alpha="0.5"
        android:enabled="false"
        android:text="@string/next" />

</RelativeLayout>