<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:paddingHorizontal="24dp"
    tools:context=".loginActivities.ResetPasswordActivity">

    <TextView
        android:id="@+id/tvResetPassword"
        style="@style/TextView.Heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/reset_password" />

    <TextView
        android:id="@+id/tvPasswordText"
        style="@style/TextView.Normal.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvResetPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLayoutPassword"
        style="@style/Material.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPasswordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/Material.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvRePasswordText"
        style="@style/TextView.Normal.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLayoutPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/re_enter_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLayoutRePassword"
        style="@style/Material.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRePasswordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:hint="@string/re_enter_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRePassword"
            style="@style/Material.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPasswordHintOne"
        style="@style/TextView.Normal.Grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLayoutRePassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/must_be_8_characters_long" />

    <TextView
        android:id="@+id/tvPasswordHintTwo"
        style="@style/TextView.Normal.Grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPasswordHintOne"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/must_have_special_characters_amp" />

    <TextView
        android:id="@+id/tvPasswordHintThree"
        style="@style/TextView.Normal.Grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPasswordHintTwo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/must_have_letters_and_numbers" />

    <View
        android:id="@+id/expandedView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/btnNext"
        android:layout_below="@id/tvPasswordHintThree"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/btnNext"
        style="@style/Button.Mint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:enabled="false"
        android:text="@string/next" />

</RelativeLayout>