<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".activities.DiscoverActivity">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="103dp"
        android:drawablePadding="12dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:drawableLeftCompat="@drawable/simform_logo" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextView.title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="45dp"
        android:gravity="center"
        android:text="@string/discover_the_world_around_you" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        style="@style/Button.Mint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/continue_string" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinueBusiness"
        style="@style/Button.Mint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="94dp"
        android:backgroundTint="@color/offGrey"
        android:text="@string/continue_as_business"
        android:textColor="@color/textWhite" />

</LinearLayout>