<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgBlack"
    android:padding="16dp"
    tools:context=".activity.ForgotPasswordActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvForgotPassword"
        style="@style/TextView.Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvForgotPasswordString"
        style="@style/TextView.Normal.Grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/forgot_pwd_string"
        app:layout_constraintEnd_toEndOf="@+id/tvForgotPassword"
        app:layout_constraintStart_toStartOf="@+id/tvForgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

    <TextView
        android:id="@+id/tvForgotEmail"
        style="@style/TextView.Normal.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/username_email"
        app:layout_constraintStart_toStartOf="@+id/tvForgotPasswordString"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordString" />

    <EditText
        android:id="@+id/etForgotEmail"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/enter_username_or_email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvForgotEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotEmail" />

    <Button
        android:id="@+id/btnForgotSubmit"
        style="@style/Button.Mint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:enabled="false"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>